Fix -shopping  cart z-index issue

--- a/style.css
+++ b/style.css
@@ -1512,7 +1512,6 @@ Header
 	opacity: 1;
 	visibility: visible;
 	right: 0;
-	z-index: 9;
 }
 
 .boxed {
